--- a/GlobeProject/imgui.ini
+++ b/GlobeProject/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=98,257
+Pos=0,19
 Size=393,203
 Collapsed=0
 
@@ -269,7 +269,12 @@ Size=393,65
 Collapsed=0
 
 [Window][Entity Properties]
-Pos=95,92
+Pos=0,19
 Size=435,390
+Collapsed=0
+
+[Window][Log Window]
+Pos=0,19
+Size=2177,1339
 Collapsed=0
 
