--- a/GlobeProject/imgui.ini
+++ b/GlobeProject/imgui.ini
@@ -13,268 +13,28 @@ Pos=2176,19
 Size=384,1421
 Collapsed=0
 
-[Window][Entity: 6867]
-Pos=52,88
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 6771]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 1921]
-Pos=60,60
-Size=400,48
-Collapsed=0
-
-[Window][Entity: 5794]
-Pos=66,209
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 2155]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 2952]
-Pos=60,60
-Size=433,73
-Collapsed=0
-
-[Window][Entity: 7995]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 2542]
-Pos=66,76
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 7006]
-Pos=60,60
-Size=372,48
-Collapsed=0
-
-[Window][Entity: 5706]
-Pos=60,60
-Size=372,48
-Collapsed=0
-
-[Window][Entity: 8609]
-Pos=60,60
-Size=400,48
-Collapsed=0
-
-[Window][Entity: 2608]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 9995]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 9527]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 3240]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 9601]
-Pos=60,60
-Size=400,48
-Collapsed=0
-
-[Window][Entity: 7701]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 6569]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 3812]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 5534]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 386]
-Pos=60,60
-Size=386,48
-Collapsed=0
-
-[Window][Entity: 4275]
-Pos=60,60
-Size=400,48
-Collapsed=0
-
-[Window][Entity: 3826]
-Pos=70,108
-Size=400,48
-Collapsed=0
-
-[Window][Entity: 8440]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 7223]
-Pos=60,60
-Size=386,48
-Collapsed=0
-
-[Window][Entity: 1083]
-Pos=60,60
-Size=393,48
-Collapsed=0
-
-[Window][Entity: 6681]
-Pos=60,60
-Size=400,48
-Collapsed=0
-
-[Window][Entity: 8207]
-Pos=1566,390
-Size=426,287
-Collapsed=0
-
-[Window][Entity: 3373]
-Pos=60,60
-Size=386,116
-Collapsed=0
-
-[Window][Entity: 2319]
-Pos=60,60
-Size=386,116
-Collapsed=0
-
-[Window][Entity: 5613]
-Pos=60,60
-Size=379,116
-Collapsed=0
-
-[Window][Entity: 8271]
-Pos=60,60
-Size=400,116
-Collapsed=0
-
-[Window][Entity: 4167]
-Pos=60,60
-Size=393,116
-Collapsed=0
-
-[Window][Entity: 3209]
-Pos=60,60
-Size=393,116
-Collapsed=0
-
-[Window][Entity: 2543]
-Pos=60,60
-Size=386,116
-Collapsed=0
-
-[Window][Entity: 1303]
-Pos=60,60
-Size=393,116
-Collapsed=0
-
-[Window][Entity: 6209]
-Pos=60,60
-Size=400,116
-Collapsed=0
-
-[Window][Entity: 4793]
-Pos=60,60
-Size=400,116
-Collapsed=0
-
-[Window][Entity: 2339]
-Pos=60,60
-Size=400,116
-Collapsed=0
-
-[Window][Entity: 3171]
-Pos=60,60
-Size=407,116
-Collapsed=0
-
-[Window][Entity: 5422]
-Pos=60,60
-Size=379,116
-Collapsed=0
-
-[Window][Entity: 2355]
-Pos=60,60
-Size=386,65
-Collapsed=0
-
-[Window][Entity: 8288]
-Pos=60,60
-Size=420,208
-Collapsed=0
-
-[Window][Entity: 7463]
-Pos=60,60
-Size=393,65
-Collapsed=0
-
-[Window][Entity: 1783]
-Pos=60,60
-Size=393,65
-Collapsed=0
-
-[Window][Entity: 3706]
-Pos=60,60
-Size=498,585
-Collapsed=0
-
-[Window][Entity: 331]
-Pos=60,60
-Size=393,65
-Collapsed=0
-
-[Window][Entity: 8413]
-Pos=61,60
-Size=409,282
-Collapsed=0
-
-[Window][Entity: 4641]
-Pos=1124,265
-Size=471,487
-Collapsed=0
-
-[Window][Entity: 9794]
-Pos=75,81
-Size=472,262
-Collapsed=0
-
-[Window][Entity: 6198]
-Pos=60,60
-Size=393,65
-Collapsed=0
-
 [Window][Entity Properties]
-Pos=0,19
-Size=435,390
+Pos=112,337
+Size=411,367
 Collapsed=0
 
 [Window][Log Window]
-Pos=0,19
+Pos=0,20
 Size=2177,1339
+Collapsed=0
+
+[Window][Open File]
+Pos=243,338
+Size=649,631
+Collapsed=0
+
+[Window][Key Bindings]
+Pos=1193,369
+Size=455,336
+Collapsed=0
+
+[Window][Scene Window]
+Pos=495,277
+Size=924,369
 Collapsed=0
 
